# SOP-Sampling

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: sop_qas_per_page_v2_backup.json  sop_questions_0_5.json  statements.yml
docker/: python.Dockerfile
scripts/: reset_all.sh  start-database.sh  start-identify.sh  start-ui.sh
src/database/: pyproject.toml
src/database/sop_PostgreSQL/: main.py
src/database/sop_sql/: annotations_table.py  function_table.py  main.py  question_bank.py  user_table.py
src/identify/: pyproject.toml
src/identify/user_mask/: app.py
src/identify/user_mask/templates/: continue_mask.html  identify_mask.html  user_mask.html
src/q_push/: pyproject.toml
src/q_push/sop_qui/: app.py
src/q_push/sop_qui/templates/: upload_data.html
src/sop-ui/: app.py
src/sop_ui/: app.py  pyproject.toml
src/user_interface/: pyproject.toml
src/user_interface/sop_ui/: app.py
src/user_interface/sop_ui/templates/: _list.html  index.html
src/userinterface/: pyproject.toml
utils/: __init__.py  load_env.py  pyproject.toml  yml_load.py
utils/database/: __init__.py  db_functions.py
utils/logger/: __init__.py  logger.py
