[build-system]
requires = ['hatchling >= 1.26']
build-backend = 'hatchling.build'

[project]
name = 'sop-sql'
dynamic = ['version']
description = 'Creation of PostgreSQL Database'
dependencies = []

authors = [{name = 'Sandro Roth', email = 'sandro.roth@usz.ch'}]
maintainers = [{name = 'Sandro Roth', email = 'sandro.roth@usz.ch'}]

[tool.hatch.build.targets.wheel]
packages = ['sop_sql']

[project.scripts]
sop-ui = 'sop_PostgreSQL.main:main'

[tool.hatch.version]
path = 'sop_ui/__init__.py'