[build-system]
requires = ['hatchling >= 1.26']
build-backend = 'hatchling.build'

[project]
name = 'sop-sql'
dynamic = ['version']
description = 'Creation of PostgreSQL Database'
dependencies = [
    "psycopg2==2.9.11"
]

authors = [{name = 'Sandro Roth', email = 'sandro.roth@usz.ch'}]
maintainers = [{name = 'Sandro Roth', email = 'sandro.roth@usz.ch'}]

[tool.hatch.build.targets.wheel]
packages = ['sop_PostgreSQL']

[project.scripts]
sop-sql = 'sop_PostgreSQL.main:main'

[tool.hatch.version]
path = 'sop_PostgreSQL/__init__.py'