[build-system]
requires = ['hatchling >= 1.26']
build-backend = 'hatchling.build'

[project]
name = 'sop-ui'
dynamic = ['version']
description = 'graphical user interface for sop sampling'
dependencies = [
    "requests>=2.32",
    "flask>=3.1.0",
    "python-dotenv"
]

authors = [{name = 'Sandro Roth', email = 'sandro.roth@usz.ch'}]
maintainers = [{name = 'Sandro Roth', email = 'sandro.roth@usz.ch'}]

[tool.hatch.build.targets.wheel]
packages = ['sop_ui']

[tool.hatch.build]
include = ["sop_ui/templates/**/*", "sop_ui/static/**/*"]

[project.scripts]
sop-ui = 'sop_ui.app:main'

[tool.hatch.version]
path = 'sop_ui/__init__.py'